--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
 
+button {
+  border: none;
+}
+
 ul {
   list-style: none;
 }
