--- a/src/components/banner/styles.scss
+++ b/src/components/banner/styles.scss
@@ -1,3 +1,20 @@
-.banner-title {
-  color: #ff0000;
+img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.banner__text {
+  border: 2px solid #f4f4f4;
+  color: #f4f4f4;
+  position: absolute;
+  padding: 2rem 3rem;
+  top: 350px;
+  left: 200px;
+  font-size: 4rem;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+
+  display: flex;
+  flex-direction: column;
 }
