--- a/src/components/banner/styles.scss
+++ b/src/components/banner/styles.scss
@@ -1,7 +1,7 @@
 img {
   object-fit: cover;
-  height: 100%;
-  width: 100%;
+  height: 80vh;
+  width: 100vw;
 }
 
 .banner__text {
@@ -9,7 +9,7 @@ img {
   color: #f4f4f4;
   position: absolute;
   padding: 2rem 3rem;
-  top: 350px;
+  top: 200px;
   left: 200px;
   font-size: 4rem;
   font-family: "Josefin Sans", sans-serif;
