--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.main__container {
+  padding: 3rem;
+}
