--- a/src/components/mainSection/style.scss
+++ b/src/components/mainSection/style.scss
@@ -34,3 +34,38 @@
     }
   }
 }
+
+@media (max-width: 425px) {
+  .interactive__container {
+    flex-direction: column;
+    margin-top: 2rem;
+
+    &-img {
+      object-fit: cover;
+      width: 110%;
+    }
+
+    &-text {
+      position: relative;
+      padding-top: 2rem;
+      padding-right: 1.8rem;
+      right: 0;
+      width: 100%;
+
+      display: flex;
+      flex-direction: column;
+      justify-self: center;
+
+      &-title {
+        font-size: 2.4rem;
+      }
+
+      &-text {
+        color: rgba(0, 0, 0, 0.8);
+        text-align: center;
+        font-size: 1.1rem;
+        line-height: 1.5rem;
+      }
+    }
+  }
+}
