--- a/src/components/banner/styles.scss
+++ b/src/components/banner/styles.scss
@@ -19,15 +19,16 @@
   flex-direction: column;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 550px) {
   .banner-img {
     height: 100vh;
   }
 
   .banner__text {
-    padding: 1.5rem 1.3rem;
+    padding: 1.5rem 1.5rem;
     top: 250px;
-    left: 20px;
+    left: 25px;
     font-size: 3rem;
+    width: 80%;
   }
 }
